samples/_failures_safe/1761412603_415aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb07bdf0.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_cb07bdf0.c:168:9: error: expected expression at end of input
  168 |         printf("%-12s ",
      |         ^~~~~~
./samples/SAFE/__tmp_cb07bdf0.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb07bdf0.c:168:9: error: expected declaration or statement at end of input
